--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -16,6 +16,7 @@
     "removeI18n": "tsx src/remove-translation-scripts/index.ts"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.9",
     "@auth/prisma-adapter": "2.7.4",
     "@emoji-mart/data": "1.2.1",
     "@emoji-mart/react": "1.1.1",
@@ -38,6 +39,7 @@
     "@mui/material-nextjs": "6.2.1",
     "@prisma/client": "5.22.0",
     "@reduxjs/toolkit": "2.5.0",
+    "@swc/helpers": "^0.5.15",
     "@tanstack/match-sorter-utils": "8.19.4",
     "@tanstack/react-table": "8.20.6",
     "@tiptap/extension-color": "^2.10.4",
@@ -56,6 +58,7 @@
     "date-fns": "4.1.0",
     "emoji-mart": "5.6.0",
     "fs-extra": "11.2.0",
+    "graphql": "^16.11.0",
     "input-otp": "1.4.1",
     "keen-slider": "6.8.6",
     "mapbox-gl": "3.9.0",
@@ -84,6 +87,7 @@
     "@iconify/tools": "4.1.1",
     "@iconify/types": "2.0.0",
     "@iconify/utils": "2.2.1",
+    "@swc/core": "^1.13.3",
     "@types/fs-extra": "^11.0.4",
     "@types/mapbox-gl": "^3.4.1",
     "@types/negotiator": "^0.6.3",
