Add Persian (Farsi) language support
- Add Persian locale configuration to i18n settings
- Include Persian dictionary import in getDictionary utility
- Add comprehensive Persian spell-check words to VSCode settings
- Create fa.json dictionary file for Persian translations

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,100 @@
 {
-  "cSpell.words": ["iconify", "valibot"],
-  "cSpell.ignoreWords": ["Customizer", "Otps", "Vuexy", "hocs"]
+  "cSpell.words": [
+    "iconify",
+    "valibot",
+    "آکادمی",
+    "آمار",
+    "آیتم",
+    "اپکس",
+    "اجزای",
+    "احراز",
+    "ارتباط",
+    "ارجاع",
+    "اعتبارسنجی",
+    "افزودن",
+    "اقدامات",
+    "املاک",
+    "اولیه",
+    "ایجاد",
+    "ایمیل",
+    "اینترنتی",
+    "بازنشانی",
+    "برنامه",
+    "بندی",
+    "پایه",
+    "پرداخت",
+    "پروفایل",
+    "پشتیبانی",
+    "پیدا",
+    "پیشرفته",
+    "تأیید",
+    "تحلیل",
+    "تخته",
+    "تسویه",
+    "تعمیر",
+    "تقویم",
+    "تنظیمات",
+    "جدول",
+    "جزئیات",
+    "چارت",
+    "چندمرحله",
+    "چیدمان",
+    "حساب",
+    "خارجی",
+    "دارای",
+    "داشبورد",
+    "درخواست",
+    "دسترسی",
+    "دسته",
+    "دوره",
+    "دیالوگ",
+    "راهنما",
+    "زودی",
+    "سؤالات",
+    "سایر",
+    "سطوح",
+    "سفارشات",
+    "صفحات",
+    "صفحه",
+    "عبور",
+    "غیرفعال",
+    "فاکتور",
+    "فاندیشن",
+    "فراموشی",
+    "فرود",
+    "فروشگاه",
+    "قیمت",
+    "کاربر",
+    "کامپوننت",
+    "کانبان",
+    "گذاری",
+    "لجستیک",
+    "لیست",
+    "لینک",
+    "متداول",
+    "متفرقه",
+    "مجوزها",
+    "محصولات",
+    "مدیریت",
+    "مرحله",
+    "مرکز",
+    "مستندات",
+    "مشاهده",
+    "مشتری",
+    "مشتریان",
+    "معامله",
+    "منوی",
+    "ناوگان",
+    "نسخه",
+    "نشان",
+    "نظرات",
+    "نمایش",
+    "نمودارها",
+    "نمونه",
+    "هویت",
+    "ورود",
+    "ویجت",
+    "ویرایش"
+  ],
+  "cSpell.ignoreWords": ["Customizer", "Otps", "Vuexy", "hocs", "داشبوردها"]
 }
